Move module containers over to using attachments to allow keeping the stored modules in object form and add support for custom module containers via the API (https://github.com/mekanism/Mekanism-Feature-Requests/issues/449)